Hide stars on mobile and fix footer positioning

--- a/wp-content/themes/aerospace/sass/components/_header-stars.scss
+++ b/wp-content/themes/aerospace/sass/components/_header-stars.scss
@@ -11,16 +11,13 @@
 
 
     #stars-container {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      overflow: hidden;
-    }
-
-    .stars {
         display: none;
         @include breakpoint("medium") {
             display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            overflow: hidden;
         }
     }
 
